<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.jaspersoft</groupId>
    <artifactId>jrs-rest-java-client</artifactId>
    <version>5.7.0-SNAPSHOT</version>
    <name>REST client for JasperReports server</name>
    <url>http://github.com/Jaspersoft/jrs-rest-java-client</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- JRS DTO -->
        <jasperserver.dto.version>5.6.0</jasperserver.dto.version>


        <!-- Tools for testing -->
        <testng.version>6.8.8</testng.version>
        <easymock.version>3.2</easymock.version>
        <powermock.version>1.5.5</powermock.version>


        <!-- Jersey version -->
        <jersey.version>2.13</jersey.version>


        <!-- Build options -->
        <build.profile.id>dev</build.profile.id>
        <skip.integration.tests>true</skip.integration.tests>
        <skip.unit.tests>false</skip.unit.tests>


        <!-- Coverage tools dependencies -->
        <coveralls.plugin.version>2.0.0</coveralls.plugin.version>
        <cobertura.maven.plugin.version>2.5.2</cobertura.maven.plugin.version>


        <!-- Miscellaneous -->
        <jdk.version>1.6</jdk.version>

        <bouncycastle.bcprov.version>1.51</bouncycastle.bcprov.version>
        <apache.commons.version>3.0</apache.commons.version>
        <commons.io.version>2.4</commons.io.version>
        <fasterxml.version>2.3.2</fasterxml.version>


        <!-- All maven stuff -->
        <maven.resources.plugin.version>2.5</maven.resources.plugin.version>
        <maven.compiler.plugin.version>2.5.1</maven.compiler.plugin.version>
        <maven.failsafe.plugin.version>2.12</maven.failsafe.plugin.version>
        <maven.surefire.version>2.13</maven.surefire.version>
        <maven.build.helper.version>1.7</maven.build.helper.version>
    </properties>

    <profiles>
        <profile>
            <id>dev</id>
        </profile>
        <profile>
            <id>integration-test</id>
            <properties>
                <build.profile.id>integration-test</build.profile.id>
                <skip.integration.tests>true</skip.integration.tests>
                <skip.unit.tests>false</skip.unit.tests>
            </properties>
        </profile>
    </profiles>


    <dependencies>

        <!-- JRS dependencies -->
        <dependency>
            <groupId>com.jaspersoft.jasperserver</groupId>
            <artifactId>jasperserver-dto</artifactId>
            <version>${jasperserver.dto.version}</version>
        </dependency>


        <!-- Jersey dependencies -->
        <!--<dependency>-->
        <!--<groupId>org.glassfish.jersey.core</groupId>-->
        <!--<artifactId>jersey-client</artifactId>-->
        <!--<version>${jersey.version}</version>-->
        <!--</dependency>-->
        <!--<dependency>-->
        <!--<groupId>org.glassfish.jersey.media</groupId>-->
        <!--<artifactId>jersey-media-json-jettison</artifactId>-->
        <!--<version>${jersey.version}</version>-->
        <!--</dependency>-->
        <!--<dependency>-->
        <!--<groupId>org.glassfish.jersey.media</groupId>-->
        <!--<artifactId>jersey-media-json-jackson</artifactId>-->
        <!--<version>${jersey.version}</version>-->
        <!--</dependency>-->
        <!--<dependency>-->
        <!--<groupId>org.glassfish.jersey.media</groupId>-->
        <!--<artifactId>jersey-media-multipart</artifactId>-->
        <!--<version>${jersey.version}</version>-->
        <!--</dependency>-->
        <dependency>
            <groupId>org.glassfish.jersey.core</groupId>
            <artifactId>jersey-client</artifactId>
            <version>2.5</version>
        </dependency>
        <dependency>
            <groupId>com.sun.jersey</groupId>
            <artifactId>jersey-json</artifactId>
            <version>1.18</version>
        </dependency>
        <dependency>
            <groupId>com.sun.jersey.contribs</groupId>
            <artifactId>jersey-multipart</artifactId>
            <version>1.17</version>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jersey.media</groupId>
            <artifactId>jersey-media-json-jackson</artifactId>
            <version>2.5.1</version>
        </dependency>


        <!-- TestNG dependencies -->
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testng.version}</version>
            <scope>test</scope>
        </dependency>


        <!-- Mockito & extensions -->
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-module-testng</artifactId>
            <version>${powermock.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-api-mockito</artifactId>
            <version>${powermock.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-api-easymock</artifactId>
            <version>${powermock.version}</version>
            <scope>test</scope>
        </dependency>


        <!-- EasyMock dependencies -->
        <dependency>
            <groupId>org.easymock</groupId>
            <artifactId>easymock</artifactId>
            <version>${easymock.version}</version>
            <scope>test</scope>
        </dependency>


        <!-- Logger -->
        <!--<dependency>-->
            <!--<groupId>log4j</groupId>-->
            <!--<artifactId>log4j</artifactId>-->
            <!--<version>1.2.17</version>-->
        <!--</dependency>-->


        <!-- Misc dependencies -->
        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcprov-jdk15on</artifactId>
            <version>${bouncycastle.bcprov.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${apache.commons.version}</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>${commons.io.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-yaml</artifactId>
            <version>${fasterxml.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-xml</artifactId>
            <version>${fasterxml.version}</version>
        </dependency>
        <dependency>
        	<groupId>commons-logging</groupId>
        	<artifactId>commons-logging</artifactId>
        	<version>1.1.1</version>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>jrs-ce-releases</id>
            <name>JasperReports Server CE releases repository</name>
            <url>http://jaspersoft.artifactoryonline.com/jaspersoft/jrs-ce-releases/</url>
        </repository>
        <repository>
            <id>jrs-ce-snapshots</id>
            <name>JasperReports Server CE snapshots repository</name>
            <url>http://jaspersoft.artifactoryonline.com/jaspersoft/jrs-ce-snapshots/</url>
        </repository>
        <repository>
            <id>opencast-public</id>
            <url>http://repository.opencastproject.org/nexus/content/repositories/public/</url>
        </repository>
    </repositories>


    <scm>
        <connection>scm:git:http://github.com/Jaspersoft/jrs-rest-java-client</connection>
        <developerConnection>scm:git:https://github.com/Jaspersoft/jrs-rest-java-client</developerConnection>
        <tag>HEAD</tag>
    </scm>


    <build>
        <filters>
            <filter>profiles/${build.profile.id}/config.properties</filter>
        </filters>
        <resources>
            <resource>
                <filtering>true</filtering>
                <directory>src/main/resources</directory>
            </resource>
        </resources>


        <plugins>

            <!-- Used to add source directories to our build. -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>${maven.build.helper.version}</version>
                <executions>
                    <execution>
                        <id>add-integration-test-sources</id>
                        <phase>generate-test-sources</phase>
                        <goals>
                            <goal>add-test-source</goal>
                        </goals>
                        <configuration>
                            <sources>
                                <source>src/integration-test/java</source>
                            </sources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plugin.version}</version>
                <configuration>
                    <source>${jdk.version}</source>
                    <target>${jdk.version}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>${maven.resources.plugin.version}</version>
                <configuration>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>cobertura-maven-plugin</artifactId>
                <version>${cobertura.maven.plugin.version}</version>
                <configuration>
                    <format>xml</format>
                    <maxmem>256m</maxmem>
                    <aggregate>true</aggregate>
                    <check/>
                    <instrumentation>
                        <excludes>
                            <exclude>**/com/jaspersoft/jasperserver/jaxrs/client/dto/**</exclude>
                            <exclude>**/com/jaspersoft/jasperserver/jaxrs/client/apiadapters/resources/util/**</exclude>
                            <exclude>**/IT*.java</exclude>
                        </excludes>
                    </instrumentation>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.eluder.coveralls</groupId>
                <artifactId>coveralls-maven-plugin</artifactId>
                <version>${coveralls.plugin.version}</version>
                <configuration>
                    <branch>develop</branch>
                </configuration>
            </plugin>


            <!-- Used for unit tests -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.version}</version>
                <configuration>
                    <skipTests>${skip.unit.tests}</skipTests>
                    <excludes>
                        <exclude>**/IT.java</exclude>
                    </excludes>
                </configuration>
            </plugin>


            <!-- Used for integration tests -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${maven.failsafe.plugin.version}</version>
                <configuration>
                    <!-- it gives more memory for IT -->
                    <argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
                </configuration>
                <executions>
                    <execution>
                        <id>integration-tests</id>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                        <configuration>
                            <skipTests>${skip.integration.tests}</skipTests>
                        </configuration>
                    </execution>
                </executions>
            </plugin>


            <!-- All-IN-ONE jar build plugin -->
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <developers>
        <developer>
            <id>borys.kolesnykov</id>
            <name>Borys Kolesnykov</name>
            <email>borys.kolesnikov@gmail.com</email>
            <roles>
                <role>architect</role>
                <role>developer</role>
            </roles>
            <timezone>+3</timezone>
        </developer>
        <developer>
            <id>Krasnyanskiy</id>
            <name>Alexander Krasnyanskiy</name>
            <email>krasnyanskiy.alex@gmail.com</email>
            <roles>
                <role>developer</role>
            </roles>
            <timezone>+3</timezone>
        </developer>
    </developers>
</project>